--- a/PremiumCalculator/PremiumCalculator.csproj
+++ b/PremiumCalculator/PremiumCalculator.csproj
@@ -15,10 +15,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="12.0.1" />
+        <PackageReference Include="MediatR.Extensions.FluentValidation.AspNetCore" Version="4.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.14" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
+        <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     </ItemGroup>
 
     <ItemGroup>
